// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`emotion/babel babel css prop StringLiteral css prop value 1`] = `"<div className={css(\\"css-jf1v9l\\", [])}></div>;"`;

exports[`emotion/babel babel css prop basic 1`] = `"<div className={\\"a\\" + \\" \\" + css(\\"css-jf1v9l\\", [])}></div>;"`;

exports[`emotion/babel babel css prop className as expression 1`] = `"<div className={variable + \\" \\" + css(\\"css-jf1v9l\\", [])}></div>;"`;

exports[`emotion/babel babel css prop className as expression string 1`] = `"<div className={\`test__class\` + \\" \\" + css(\\"css-jf1v9l\\", [])} this={\`hello\`}></div>;"`;

exports[`emotion/babel babel css prop css empty 1`] = `"<div className={css(\\"css-0\\", [])}></div>;"`;

exports[`emotion/babel babel css prop emptyClassName 1`] = `"<div className={\\"\\" + \\" \\" + css(\\"css-jf1v9l\\", [])}></div>;"`;

exports[`emotion/babel babel css prop no css attr 1`] = `"<div></div>;"`;

exports[`emotion/babel babel css prop noClassName 1`] = `"<div className={css(\\"css-jf1v9l\\", [])}></div>;"`;

exports[`emotion/babel babel emotion component attr 1`] = `
"emotion('input', ['css-14vghnb', [function getMargin(props) {
       return props.margin;
}, props => props.height * props.scale, function getWidth(props) {
       return props.width;
}, flex]]);"
`;

exports[`emotion/babel babel emotion component attr kitchen sink 1`] = `
"emotion('input', ['css-j4zr0t', [function getMargin(props) {
        return props.margin ? props.margin : ('16' + 'px');
}, function getPadding(props) {
        return props.padding ? props.padding : ('16' + 'em');
}, function getHeight(props) {
        return props.height ? props.height : ('90' + 'vw');
}, function getDisplay(props) {
        return props.display ? props.display : ('flex' + '');
}]]);"
`;

exports[`emotion/babel babel emotion component attr with default value 1`] = `
"emotion('input', ['css-1luxokk', [function getMargin(props) {
        return props.margin ? props.margin : ('16' + '');
}]]);"
`;

exports[`emotion/babel babel emotion component attr with value type 1`] = `
"emotion('input', ['css-1luxokk', [function getMargin(props) {
        return props.margin + 'px';
}]]);"
`;

exports[`emotion/babel babel emotion component attr with value type and default value 1`] = `
"emotion('input', ['css-1luxokk', [function getMargin(props) {
        return props.margin ? props.margin : ('16' + 'px');
}]]);"
`;

exports[`emotion/babel babel emotion component basic 1`] = `"emotion(\\"h1\\", [\\"css-8xpzga\\", [fontSize]]);"`;

exports[`emotion/babel babel emotion component function call 1`] = `"emotion(MyComponent, [\\"css-8xpzga\\", [fontSize]]);"`;

exports[`emotion/babel babel emotion component match works on multiple 1`] = `
"emotion('input', ['css-1j6h68f', [function getMargin(props) {
        return props.margin ? props.margin : ('16' + 'px');
}, function getPadding(props) {
        return props.padding ? props.padding : ('16' + 'em');
}]]);"
`;
